--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+  <div class="everything">
+
+
+
   <head>
         <title> Resume/CV </title>
     <!-- webpage stylesheet -->
@@ -15,6 +19,13 @@
     margin: 2em;
   }
   
+  .everything{ 
+  margin: auto;
+  width: 50%;
+  border: 3px solid green;
+  padding: 10px;}
+
+
   h1 {
     font-style: italic;
     color: #373fff;
@@ -26,12 +37,14 @@
   
   }</style>
   <body>
+    <div class ="Part1"
 <h1>Resume</h1>
     <h2>Caroline Baughman - Drumset</h2>
-    
+    <center>
      <img src="https://media.istockphoto.com/id/483556448/photo/drum-kit.jpg?s=612x612&w=0&k=20&c=YEDZZ4TlF457rV3tD5_DBH23GFU090a0IZE8YIXhVSo="
     
 ___________________________________________    <div>
+</center>
     </div>
       <h2>
         Education
@@ -122,4 +135,5 @@ _____
     </div>
 
   </body>
+</div>
 </html>
